# techdocs

./: .travis.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
css/: extra.css
day1/document/: index.html
day1/sentences/: index.html
day1/words/: index.html
day2/kinds/: index.html
day2/rdd/: index.html
day2/tools/: index.html
docs/: index.md
docs/day1/: document.md  sentences.md  words.md
docs/day2/: kinds-and-tools.md  kinds.md  rdd.md  readme.md  techdoc-kinds.md  tools.md
search/: search_index.json
