[tool.poetry]
name = "techdocsintesive"
version = "0.1.0"
description = ""
authors = ["Konstantin Molchanov <moigagoo@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^3.0"
pymdown-extensions = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
